Fix spacing.

--- a/docs/overview.css
+++ b/docs/overview.css
@@ -4,6 +4,11 @@
     /*margin-left: 100px;*/
 }
 
+/* Chart title padding */
+#overview .chart-title {
+    margin-bottom: 50px;
+}
+
 /* Chart title */
 .chart-title {
     text-align: center;
@@ -15,6 +20,7 @@
     font-style: oblique;
     text-align: center;
     margin-top: 10px;
+    font-size: 14px;
 }
 
 /* Tooltip container */
